--- a/angular_04_echarts/src/app/components/select-chart/select-chart.component.html
+++ b/angular_04_echarts/src/app/components/select-chart/select-chart.component.html
@@ -212,7 +212,7 @@
                             <input matStartDate placeholder="Start date" [(ngModel)]="userOptions.startDate">
                             <input matEndDate placeholder="End date" [(ngModel)]="userOptions.endDate">
                         </mat-date-range-input>
-                        <mat-hint class="text-white small">MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+                        <mat-hint class="text-white small w-100">MM/DD/YYYY – MM/DD/YYYY</mat-hint>
                         <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-date-range-picker touchUi #picker></mat-date-range-picker>
                     </mat-form-field>
@@ -251,8 +251,43 @@
 
             <div
                 *ngIf="filterNumber === 2"
-                class="h-300 w-100 py-2 d-flex align-items-start justify-content-center flex-column">
-                oi
+                class="w-75 d-flex align-items-center justify-content-center flex-column">
+                <h1 class="w-100 text-center block m-2 fs-6 normal px-4 pt-3 pb-2 text-white">Selecione o usuário</h1>
+                <div *ngFor="let user of usersFromDB" class="max-h-300 w-75 overflow-y-auto d-flex align-items-start justify-content-center flex-column">
+                    <button (click)="userOptions.specificFilter = 'u.name = \'' + user + '\''"
+                            class="w-100 btn text-12 rounded rounded-lg bg-pink text-white p-2 mb-2"
+                            [ngSwitch]="user" [ngClass]="{ 'bg-gray': userOptions.specificFilter === 'u.name = \'' + user + '\'' }">
+                        <ng-container *ngSwitchDefault>{{user}}</ng-container>
+                    </button>
+                </div>
+            </div>
+
+            <div
+                *ngIf="filterNumber === 3"
+                class="w-75 d-flex align-items-center justify-content-center flex-column">
+                <h1 class="w-100 text-center block m-2 fs-6 normal px-4 pt-3 pb-2 text-white">Selecione o Segmento</h1>
+                <div *ngFor="let segment of segmentsFromDB" class="max-h-300 w-75 overflow-y-auto d-flex align-items-start justify-content-center flex-column">
+                    <button (click)="userOptions.specificFilter = 'u.segment = \'' + segment + '\''"
+                            class="w-100 btn text-12 rounded rounded-lg bg-pink text-white p-2 mb-2"
+                            [ngSwitch]="segment" [ngClass]="{ 'bg-gray': userOptions.specificFilter === 'u.segment = \'' + segment + '\'' }">
+                        <ng-container *ngSwitchDefault>{{segment}}</ng-container>
+                    </button>
+                </div>
+            </div>
+
+            <div
+                *ngIf="filterNumber === 4"
+                class="w-75 d-flex align-items-center justify-content-center flex-column">
+                <h1 class="w-100 text-center block m-2 fs-6 normal px-4 pt-3 pb-2 text-white">Selecione o Tipo de Documento</h1>
+                <div class="w-100 h-200 overflow-y-auto d-flex align-items-center justify-content-top flex-column">
+                    <div *ngFor="let doc of docTypesFromDB" class="w-75 d-flex align-items-start justify-content-center flex-column">
+                        <button (click)="userOptions.specificFilter = 'e.doc_type = \'' + doc + '\''"
+                                class="w-100 btn text-12 rounded rounded-lg bg-pink text-white p-2 mb-2"
+                                [ngSwitch]="doc" [ngClass]="{ 'bg-gray': userOptions.specificFilter === 'u.segment = \'' + doc + '\'' }">
+                            <ng-container *ngSwitchDefault>{{doc}}</ng-container>
+                        </button>
+                    </div>
+                </div>
             </div>
 
             <aside class="mt-2 w-75">
@@ -263,6 +298,12 @@
                     </li>
                     <li class="btn bg-pink text-white" (click)="filterNumber = 2" [ngClass]="{ 'bg-gray': filterNumber === 2 }">
                         <span>2</span>
+                    </li>
+                    <li class="btn bg-pink text-white" (click)="filterNumber = 3" [ngClass]="{ 'bg-gray': filterNumber === 3 }">
+                        <span>3</span>
+                    </li>
+                    <li class="btn bg-pink text-white" (click)="filterNumber = 4" [ngClass]="{ 'bg-gray': filterNumber === 4 }">
+                        <span>4</span>
                     </li>
                 </ul>
             </aside>
