feat: Making responsiveness and mobile menu

--- a/angular_04_echarts/src/app/components/navbar/navbar.component.html
+++ b/angular_04_echarts/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,9 @@
-<header class="col-md-12 position-fixed z-2 d-flex align-items-center flex-row h-90 bg-white">
-    <div class="d-flex justify-content-start align-items-center h-90">
+
+<header class="desktop-navbar col-md-12 position-fixed z-2 d-flex align-items-center flex-row h-90 bg-white">
+    <div class="d-flex justify-content-center align-items-center h-90 w-256">
         <img src="../assets/logo.svg"
             alt="Logo da empresa Di2win, em letras pretas, com o número 2 em cor rosa, e um icone rosa a frente"
-            class="w-256">
+            class="w-75">
     </div>
     <div class="flex-grow-1 d-flex flex-row justify-content-end ms-4 pe-5 h-90">
         <div class="d-flex justify-content-center align-items-center flex-column">
