--- a/angular_04_echarts/src/app/page/dashboard/dashboard.component.html
+++ b/angular_04_echarts/src/app/page/dashboard/dashboard.component.html
@@ -34,7 +34,7 @@
         </div>
         <div
             class="w-100 position-relative col-md-12 col-lg-10 shadow h-500 rounded rounded-lg border-pink">
-            <app-select-chart [cardID]="card08"></app-select-chart>
+            <app-select-chart [cardID]="card08" [chartValues]="dashboard08Data"></app-select-chart>
         </div>
     </div>
 
