--- a/angular_04_echarts/src/app/app.component.html
+++ b/angular_04_echarts/src/app/app.component.html
@@ -1,7 +1,8 @@
-<section class="d-flex flex-column px-3">
+<section class="d-flex flex-column mainSection">
     <app-navbar [username]="username" [profileType]="profileType" [profile_picture]="profile_picture"></app-navbar>
-    <app-sidebar (menuOption)="receivesMenuOption($event)"></app-sidebar>
-    <article class="p-1 ms-17 mt-6">
+    <app-mobile-bar (toggleMobileSidebar)="receivesToggleMobileNavbar($event)"></app-mobile-bar>
+    <app-sidebar (menuOption)="receivesMenuOption($event)" [toggleMobileSidebarOption]="toggleMobileSidebarOption" [username]="username" [profileType]="profileType" [profile_picture]="profile_picture"></app-sidebar>
+    <article class="p-1 mt-6 mainContainer" (click)="toggleMobileSidebarOption = false">
         <app-dashboard *ngIf="menuOptionValue === 'dashboard'"></app-dashboard>
         <app-favorite 
         *ngIf="menuOptionValue === 'favorite'"
