--- a/angular_04_echarts/src/app/components/select-chart/select-chart.component.html
+++ b/angular_04_echarts/src/app/components/select-chart/select-chart.component.html
@@ -9,7 +9,7 @@
             <h1 *ngIf="columnNumber === 2"
                 class="w-50 max-w-200 text-center mx-4 block m-2 fs-6 normal px-4 pt-3 pb-2 text-white">Selecione uma
                 consulta</h1>
-            <div class="w-50 max-w-200 max-h-300 overflow-y-auto mx-4 py-2">
+            <div class="w-100 max-w-200 max-h-300 overflow-y-auto mx-4 py-2">
                 <section class="d-flex justify-content-center align-items-start flex-column gap-2">
                     <div *ngIf="
                         columnNumber === 1 
@@ -156,7 +156,7 @@
             </div>
 
             <aside class="mt-2 w-100 max-w-200">
-                <ul class="p-0 w-100 max-w-200 d-flex align-items-start justify-content-center gap-2">
+                <ul class="mx-4 p-0 w-100 max-w-200 d-flex align-items-start justify-content-center gap-2">
                     <li *ngIf="
                         !userOptions.selectedOptions.includes('only_doc_count') 
                         && !userOptions.selectedOptions.includes('only_pages_process') 
@@ -177,7 +177,7 @@
                 </ul>
             </aside>
 
-            <div class="w-50 max-w-200 h-39 mx-4 d-flex align-items-start justify-content-center flex-row gap-2 mt-2">
+            <div class="w-100 max-w-200 h-39 mx-4 d-flex align-items-start justify-content-center flex-row gap-2 mt-2">
 
                 <button class="w-100 h-100 btn text-14 rounded rounded-lg bg-pink text-white p-2"
                     *ngIf="(selectedOptions >= 2 || (selectedOptions === 1 && readyQueries.includes(userOptions.selectedOptions[0])))"
@@ -207,9 +207,9 @@
         </div>
         <div *ngIf="isFilter" class="col-9 backdrop w-75">
             <div *ngIf="filterNumber === 1"
-                class="h-340 w-100 py-2 d-flex align-items-start justify-content-center flex-column">
+                class="h-340 w-100 py-2 d-flex align-items-start justify-content-top flex-column">
                 <div class="w-75 d-flex flex-column filterContent">
-                    <h1 class="w-100 block m-2 fs-6 normal px-4 pt-3 pb-2 text-white">Selecione o período</h1>
+                    <h1 class="w-100 block m-2 fs-6 normal px-4 pt-1 pb-2 text-white">Selecione o período</h1>
                     <mat-form-field class="w-100">
                         <mat-label class="text-pink">Insira um período</mat-label>
                         <mat-date-range-input [rangePicker]="picker">
@@ -223,7 +223,7 @@
                 </div>
                 <div *ngIf="(!userOptions.selectedOptions.includes('doc_count') && !userOptions.selectedOptions.includes('only_doc_count'))"
                     class="w-75 h-340 py-2 d-flex flex-column align-items-center justify-content-center gap-2">
-                    <span class="my-2 text-white">Selecione uma Agregação</span>
+                    <span class="my-1 text-white">Selecione uma Agregação</span>
                     <div class="d-flex flex-row align-items-center justify-content-center gap-2">
                         <button
                             *ngIf="isFilter && (!userOptions.selectedOptions.includes('pages_process') && !userOptions.selectedOptions.includes('only_pages_process'))"
@@ -257,8 +257,8 @@
             </div>
 
             <div *ngIf="filterNumber === 2"
-                class="h-340 w-75 d-flex align-items-center justify-content-center flex-column">
-                <h1 class="w-100 text-center block m-2 fs-6 normal px-4 pt-3 pb-2 text-white">Selecione o usuário</h1>
+                class="h-340 w-75 d-flex align-items-center justify-content-top flex-column">
+                <h1 class="w-100 text-center block m-2 fs-6 normal px-4 pt-1 pb-2 text-white">Selecione o usuário</h1>
                 <div *ngFor="let user of usersFromDB"
                     class="max-h-300 w-75 overflow-y-auto d-flex align-items-start justify-content-center flex-column">
                     <button (click)="setSpecificFilter('lower(u.name) = ' + removeItemStyle(user))"
@@ -270,8 +270,8 @@
             </div>
 
             <div *ngIf="filterNumber === 3"
-                class="h-340 w-75 d-flex align-items-center justify-content-center flex-column">
-                <h1 class="w-100 text-center block m-2 fs-6 normal px-4 pt-3 pb-2 text-white">Selecione o Segmento</h1>
+                class="h-340 w-75 d-flex align-items-center justify-content-top flex-column">
+                <h1 class="w-100 text-center block m-2 fs-6 normal px-4 pt-1 pb-2 text-white">Selecione o Segmento</h1>
                 <div *ngFor="let segment of segmentsFromDB"
                     class="max-h-300 w-75 overflow-y-auto d-flex align-items-start justify-content-center flex-column">
                     <button (click)="setSpecificFilter('lower(u.segment) = ' + removeItemStyle(segment))"
@@ -283,8 +283,8 @@
             </div>
 
             <div *ngIf="filterNumber === 4"
-                class="h-340 w-75 d-flex align-items-center justify-content-center flex-column">
-                <h1 class="w-100 text-center block m-2 fs-6 normal px-4 pt-3 pb-2 text-white">Selecione o Tipo de
+                class="h-340 w-75 d-flex align-items-center justify-content-top flex-column">
+                <h1 class="w-100 text-center block m-2 fs-6 normal px-4 pt-1 pb-2 text-white">Selecione o Tipo de
                     Documento</h1>
                 <div class="w-100 h-200 overflow-y-auto d-flex align-items-center justify-content-top flex-column">
                     <div *ngFor="let doc of docTypesFromDB"
@@ -298,7 +298,7 @@
                 </div>
             </div>
 
-            <aside class="mt-2 w-75">
+            <aside class="mt-3 w-75">
                 <ul class="p-0 w-100 d-flex align-items-start justify-content-center gap-2">
                     <li class="btn bg-pink text-white" (click)="filterNumber = 1"
                         [ngClass]="{ 'bg-gray': filterNumber === 1 }">
@@ -319,11 +319,11 @@
                 </ul>
             </aside>
 
-            <div class="w-75 py-2 d-flex align-items-start justify-content-center flex-column">
+            <div class="w-75 py-1 d-flex align-items-start justify-content-center flex-column">
                 <span class="my-2 small w-100 text-white text-center">
                     Salve para atualizar os dados :)
                 </span>
-                <div class="d-flex align-items-end justify-content-center filterButtons w-100">
+                <div class="d-flex align-items-end justify-content-center flex-row filterButtons w-100">
                     <button *ngIf="isFilter" class="btn text-14 rounded rounded-lg bg-gray text-white p-2"
                         (click)="cleanFilter()">Limpar Filtro</button>
                     <button *ngIf="isFilter" class="btn text-14 rounded rounded-lg bg-pink text-white p-2"
