--- a/angular_04_echarts/src/app/page/dashboard/dashboard.component.css
+++ b/angular_04_echarts/src/app/page/dashboard/dashboard.component.css
@@ -3,11 +3,12 @@
 }
 
 .grid-template{
-    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(365px, 1fr));
 }
 
 .dashboard-first-container{
     flex-direction: column;
+    min-width: 365px;
 }
 
 .dasboard-04{
